--- a/auth-service/auth-server/src/main/resources/application.yml
+++ b/auth-service/auth-server/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  application:
+    name: auth-service
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: hieu
@@ -26,9 +28,13 @@ spring:
       host: localhost
       port: 6378
 server:
-  port: 8081
+  port: 8088
 application:
   token:
     key: ShopSport123@tjukjgkgfyhvjyjrtcrftxgrxjuyhzygtxgresxcx
     expire-time-access-token: 300000
     expire-time-refresh-token: 8640000
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8061/eureka/
