--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
   application:
     name: gateway-service
   cloud:
+    loadbalancer:
+      configurations: health-check
     gateway:
       httpclient:
         connect-timeout: 10000
@@ -12,19 +14,19 @@ spring:
 
       routes:
         - id: department-service
-          uri: "http://localhost:8081/"
+          uri: lb://department-service
           predicates:
             - Path=/department/**
           filters:
             - RewritePath=/department/(?<path>.*), /$\{path}
         - id: auth-service
-          uri: "http://localhost:8088/"
+          uri: lb://auth-service
           predicates:
             - Path=/auth/**
           filters:
             - RewritePath=/auth/(?<path>.*), /$\{path}
         - id: employee-service
-          uri: "http://localhost:8082/"
+          uri: lb://employee-service
           predicates:
             - Path=/employee/**
           filters:
@@ -48,8 +50,6 @@ springdoc:
         url: /v3/api-docs/employee
       - name: department
         url: /v3/api-docs/department
-      - name: gateway
-        url: /v3/api-docs
       - name: auth
-        url: /v3/api-docs
+        url: /v3/api-docs/auth
 
